UPGRADED 4 STARS TO 5 STARS

--- a/dsa_bootcamp.html
+++ b/dsa_bootcamp.html
@@ -199,7 +199,7 @@
 
 
                                     <li class="justify-content-between align-items-center d-flex">
-                                        <p style="font-size:15px; color:rgb(95, 88, 115)">Heaps and ries</p>
+                                        <p style="font-size:15px; color:rgb(95, 88, 115)">Heaps and tries</p>
                                         
                                         <a class="btn_2 text-uppercase" style="color:rgb(12, 46, 96)" onclick="toggleText('c7')">View Details</a>
                                         <li><p id="c7" style="display: none;">Explore data structures like heaps and tries here.</p></li>
@@ -258,7 +258,7 @@
 
                 <script>
                     function toggleText(divid) {
-                        const cs = ["c1", "c2", "c3", "c4", "c5", "c6", "c7", "c8", "c9", "c10", "c11", "c12", "c13"];
+                        const cs = ["c1", "c2", "c3", "c4", "c5", "c6", "c7", "c8", "c9", "c10", "c11", "c12","c13"];
 
                         for (let i = 0; i < cs.length; i++) {
                             var textt = document.getElementById(cs[i]);
@@ -319,7 +319,7 @@
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                            <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                            <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                         </div>
                                     <span>Outstanding</span>
                                 </div>
@@ -330,7 +330,7 @@
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                            <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                            <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                         </div>
                                     <span>Outstanding</span>
                                 </div>
@@ -341,7 +341,7 @@
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                            <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                            <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                         </div>
                                     <span>Outstanding</span>
                                 </div>
@@ -370,7 +370,7 @@
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                                <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                                <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             </div>
                                             <p class="comment">
                                                 Blessed made of meat doesn't lights doesn't was dominion and sea earth
@@ -394,7 +394,7 @@
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                                <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                                <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             </div>
                                             <p class="comment">
                                                 Blessed made of meat doesn't lights doesn't was dominion and sea earth
@@ -418,7 +418,7 @@
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                                 <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
-                                                <a href="#"><img src="img/icon/star.svg" alt=""></a>
+                                                <a href="#"><img src="img/icon/color_star.svg" alt=""></a>
                                             </div>
                                             <p class="comment">
                                                 Blessed made of meat doesn't lights doesn't was dominion and sea earth
